--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <link rel="stylesheet" href="./main.css">
     </head>
     <body>
-        <div><table id="scale"></table></div>
-        <span>Samples come from the <a href="http://theremin.music.uiowa.edu/MISpiano.html">University of Iowa's EMS repository</a>.
+        <div id="ribbon" class="ribbon"></div>
+        <footer>
+            <span class="attribution">Samples come from the <a href="http://theremin.music.uiowa.edu/MISpiano.html">University of Iowa's EMS repository</a>.
+        </footer>
     </body>
 </html>
