sassify, cooler styling

--- a/index.html
+++ b/index.html
@@ -5,14 +5,29 @@
         <title>Vimstrument</title>
     </head>
     <body>
-        <div id="ribbon" class="ribbon"></div>
-        <div class="scale">
-            <span>Scale</span>
-            <input id="scale-input" value="C D E F G A B">
-            <input type="button" id="scale-button" value="Create">
-            <span id="error"></span>
+        <div class="content">
+            <span class="title">Vimstrument</span>
+            <p>The Vimstrument is a piano you play with intervals, rather
+            than by pressing notes directly. The instrument has a starting note,
+            which can be played with the space bar. To move the note upward,
+            press J to move one note up, K to move by two, etc. Likewise, press
+            F to move one note downward, D for two, etc. Press Shift to move by
+            larger intervals, and use the controls below to use different scales
+            or to disable sustain.</p>
+            <div id="ribbon" class="ribbon"></div>
+            <div class="controls">
+                <div class="scale">
+                    <span>Scale</span>
+                    <input id="scale-input" value="C D E F G A B">
+                    <input type="button" id="scale-button" value="Create">
+                    <span id="error"></span>
+                </div>
+                <div id="sustain">
+                    <span>Sustain</span>
+                    <input type="checkbox" checked="true">
+                </div>
+            </div>
         </div>
-        <div id="sustain"><span>Sustain</span><input type="checkbox" checked="true"></div>
         <footer>
             <span class="attribution">Samples come from the <a href="http://theremin.music.uiowa.edu/MISpiano.html">University of Iowa's EMS repository</a>.
         </footer>
