nicer styling (thanks syd)

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <body>
         <div class="content">
             <span class="title">Vimstrument</span>
-            <p>The Vimstrument is a piano you play with intervals, rather
-            than by pressing notes directly. The instrument has a starting note,
+            <p>The Vimstrument is a piano you play with intervals, rather than
+            by pressing notes directly. The instrument has a starting note,
             which can be played with the space bar. To move the note upward,
-            press J to move one note up, K to move by two, etc. Likewise, press
-            F to move one note downward, D for two, etc. Press Shift to move by
-            larger intervals, and use the controls below to use different scales
-            or to disable sustain.</p>
+            press <code>j</code> to move one note up, <code>k</code> to move by
+            two, etc. Likewise, press
+            <code>f</code> to move one note downward, <code>d</code> for two,
+            etc. Press <code>Shift</code> to move by larger intervals, and use
+            the controls below to use different scales or to disable
+            sustain.</p>
             <div id="ribbon" class="ribbon"></div>
             <div class="controls">
                 <div class="scale">
